# webhook-relay

./: .env.deployment.example  .env.example  .gitignore  .spectral.yaml  CLAUDE.md  README.md  composer.json  openapitools.json  package-lock.json  package.json
.github/workflows/: api-ci.yml  api-smoke.yml  sdk-ci.yml  sdk-publish.yml
app/Jobs/: DeliverEventToSubscription.php
app/Models/: ApiKey.php  Delivery.php  DeliveryAttempt.php  Event.php  IdempotencyRecord.php  Subscription.php  User.php  Workspace.php
app/Providers/: HorizonServiceProvider.php
app/Services/: SandboxAllowlist.php  SsrfGuard.php  SubscriptionMatcher.php  WebhookSigner.php
bootstrap/: app.php
config/: app.php  cors.php
database/migrations/: 2026_06_06_233940_create_workspaces_table.php  2026_06_06_233941_create_api_keys_table.php  2026_06_06_233941_create_events_table.php  2026_06_06_233942_create_idempotency_records_table.php  2026_06_07_000508_create_subscriptions_table.php  2026_06_07_000509_create_deliveries_table.php  2026_06_07_000510_create_delivery_attempts_table.php  2026_06_07_032549_add_is_sandbox_to_workspaces.php
infra/apache/: api.webhook-relay.dcsuniverse.com-le-ssl.conf  api.webhook-relay.dcsuniverse.com.conf  webhook-relay.dcsuniverse.com-le-ssl.conf  (+1 more)
openapi/: spec.yaml
routes/: api.php  console.php
scripts/: build-reference-pdf.cjs  build-sdk-zips.sh
sdks/go/: go.mod  (+3 more)
sdks/python/: README.md  pyproject.toml
sdks/python/tests/: test_signature.py
sdks/python/webhook_relay/: __init__.py  signature.py
web/: deploy.config.js  package-lock.json  package.json
(+109 files in other folders)
